store error logs to db
