# web/controller/container/router.go
@@ -6,6 +6,4 @@ func RegisterRouter(r *gin.Engine) {
 	r.GET("/container", GetContainer)
 	r.GET("/container/calls", GetContainerCallChain)
 	r.GET("/container/traffic", GetContainerTraffic)
-	r.GET("/container/logs", GetContainerLogs)
-	r.GET("/container/monitorLogs", GetMonitorLogs)
 }
